[gd_scene load_steps=22 format=3 uid="uid://cet5a4863rh3b"]

[ext_resource type="Script" uid="uid://c7gmg004p2isn" path="res://scripts/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://2g6runivucvy" path="res://char and prop/characters/slime.png" id="1_7k104"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyqm"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("1_7k104")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("1_7k104")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("1_7k104")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("1_7k104")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("1_7k104")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("1_7k104")
region = Rect2(160, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jmwgi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2u8i"]
radius = 90.6722

[sub_resource type="CircleShape2D" id="CircleShape2D_otto8"]
radius = 29.9481

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 82.0244

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.33333, 12)
scale = Vector2(2.875, 2.75)
sprite_frames = SubResource("SpriteFrames_jmwgi")
animation = &"idle"
frame_progress = 0.689187
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-1.33334, -0.666672)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_g2u8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_otto8")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_4gyqm")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
